Fixed the overlaping problems

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -16,6 +16,22 @@
   overflow: scroll;
 }
 
+#no-results-container {
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#no-results {
+  color: white;
+  font-size: 30px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+}
+
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
